# libbpf-bootstrap

./: LICENSE  clang_sys_inc.sh  meson.build  meson_options.txt
examples/c/: .gitignore  Makefile  libdecor_lsm.bpf.c  libdecor_lsm.c
libdecor_lsm/: Makefile  libdecor_lsm.service
src/: .gitignore  Makefile  evil_list.c.inc  evil_list.py  evil_list.yaml  meson.build  program_blacklist.bpf.c  program_blacklist.c  program_blacklist_events.h  protected_process.c  protected_process_common.c  protected_process_common.h  protected_process_events.h
src/bpf/: meson.build  program_blacklist.c  protected_process.c
